katalog/kong-mesh/global-control-plane/resources/kong-mesh-system-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kong-mesh-system
  labels:
    kuma.io/system-namespace: "true"
