katalog/kong-mesh/global-control-plane/resources/kong-mesh-control-plane-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-mesh-control-plane
  namespace: kong-mesh-system
  labels:
    app.kubernetes.io/name: kong-mesh
    app.kubernetes.io/instance: kong-mesh
    app: kuma-control-plane
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: kong-mesh
      app.kubernetes.io/instance: kong-mesh
      app: kuma-control-plane
  template:
    metadata:
      annotations:
        checksum/config: a8c332b04d709a1da917eecc6f00a096d73871531d325d8728bb16c7f86c99f1
        checksum/tls-secrets: de65d0619b22fc2e1d19a5012d918e2e6d8ab71cef102386f8dd53da3e9953e8
      labels:
        app.kubernetes.io/name: kong-mesh
        app.kubernetes.io/instance: kong-mesh
        app: kuma-control-plane
    spec:
      serviceAccountName: kong-mesh-control-plane
      nodeSelector:
        
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
      containers:
        - name: control-plane
          image: "docker.io/kong/kuma-cp:1.4.0"
          imagePullPolicy: IfNotPresent
          args:
            - run
            - --log-level=info
            - --config-file=/etc/kuma.io/kuma-control-plane/config.yaml
          ports:
            - containerPort: 5681
            - containerPort: 5682
            - containerPort: 5443
          livenessProbe:
            httpGet:
              path: /healthy
              port: 5680
          readinessProbe:
            httpGet:
              path: /ready
              port: 5680
          resources:
            requests:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: general-tls-cert
              mountPath: /var/run/secrets/kuma.io/tls-cert
              readOnly: true
            - name: kong-mesh-control-plane-config
              mountPath: /etc/kuma.io/kuma-control-plane
              readOnly: true
      volumes:
        - name: general-tls-cert
          secret:
            secretName: kong-mesh-tls-cert
        - name: kong-mesh-control-plane-config
          configMap:
            name: kong-mesh-control-plane-config
